--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -85,6 +85,7 @@
             android:layout_height="40dp"
             android:hint="Enter number"
             android:paddingLeft="10dp"
+            android:maxLength="10"
             android:inputType="number"
             android:background="@drawable/editext"
             />
