--- a/app/src/main/res/layout/activity_profile_entry.xml
+++ b/app/src/main/res/layout/activity_profile_entry.xml
@@ -27,15 +27,12 @@
             />
 
     </com.google.android.material.appbar.AppBarLayout>
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="130dp"
             android:layout_height="130dp"
             android:id="@+id/image"
-            android:scaleType="center"
             android:layout_gravity="center"
-            android:background="@drawable/round_add_profile"
-            android:layout_marginTop="50dp"
-            app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24"
+            android:src="@drawable/photo_camera"
             />
 
 
